# Youtube-Studio

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package.json  pyproject.toml  requirements.txt  tsconfig.json  vercel.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: video-pipeline.js
apps/dashboard/: index.html
config/milestones/: M1.yaml  M2.yaml  M3.yaml  M4.yaml  M5.yaml  M6.yaml
docs/: DEPLOYMENT_READINESS.md  README.md  architecture.md  market-leading-video-pipeline-blueprint.md  market-leading-video-pipeline-implementation-plan.md  specification.md  video-pipeline-dashboard.md  worker-topology.md
docs/plans/: 2026-05-04-danslab-full-system-leverage.md  2026-05-04-professional-video-missing-integrations.md
fixtures/topics/: airplanes-one-engine-research-approved.json  airplanes-one-engine.json
operations/: 2026-04-11-provider-smoke-runbook.md
plans/: 2026-04-10-youtube-studio-bootstrap-plan.md  2026-04-11-first-implementation-backlog.md
scripts/: model_stub_server.py  push_to_github.sh  smoke_m1.py  smoke_m2.py  smoke_m3.py  smoke_m4.py  telegram_poll_approvals.py  validate-env.mjs  validate_milestones.py
src/: env.py
src/api/: __init__.py  main.py
src/audio/: __init__.py  bgm_gen.py  mixer.py
src/infra/: __init__.py  storage.py
src/manifest/: __init__.py  schema.py
src/orchestrator/: __init__.py  (+7 more)
tests/: test_smoke_m1.py  test_smoke_m2.py  test_smoke_m3.py  test_smoke_m4.py
(+26 files in other folders)
